# Orange

./: .gitignore  CONTRIBUTING.md  README.md  git-commits.ps1  simulate_users.js  user_feedback_summary.md  wallet_interactions_proof.md
.github/workflows/: ci.yml
assets/: PRODUCT_VALIDATION.md  demo_walkthrough.md
contracts/: Cargo.toml  deploy_and_test.ps1  deploy_circlepact.ps1
contracts/artist-registry/: Cargo.toml
contracts/artist-registry/src/: lib.rs  test.rs
contracts/circle-core/: Cargo.toml
contracts/circle-core/src/: lib.rs
contracts/circle-factory/: Cargo.toml
contracts/circle-factory/src/: lib.rs  test.rs
contracts/endorsement-vault/: Cargo.toml
contracts/endorsement-vault/src/: lib.rs  test.rs
contracts/payment-vault/: Cargo.toml
contracts/payment-vault/src/: lib.rs  test.rs
contracts/payment-vault/test_snapshots/test/: test_distribute_calls_registry_cross_contract_successfully.1.json  test_distribute_splits_amount_correctly_across_recipients.1.json  test_distribution_history_recorded_correctly.1.json  test_hard_math_distribution_truncation.1.json  test_huge_amounts_distribution.1.json  test_total_distributed_accumulates_across_calls.1.json
contracts/reputation-registry/: Cargo.toml
contracts/reputation-registry/src/: lib.rs
contracts/split-registry/: Cargo.toml
contracts/split-registry/src/: lib.rs  test.rs
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/public/: robots.txt
frontend/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: Nav.tsx  (+20 more)
(+38 files in other folders)
