[package]
name = "payment-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
split-registry = { path = "../split-registry" }

# split-registry is only used in tests for registering the contract
# The actual cross-contract call uses env.invoke_contract() with raw contract ID
